# vixen

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
docs/: doxygen-awesome-custom.css  style.css
examples/: CMakeLists.txt  test1.cpp  test_option.cpp  test_shared.cpp
interface/internal/vixen/hash/: hasher.hpp  map.hpp  table.hpp
interface/internal/vixentest/: test.hpp
interface/public/vixen/: any.hpp  assert.hpp  common.hpp  defer.hpp  defines.hpp  function.hpp  log.hpp  option.hpp  prof.hpp  result.hpp  shared.hpp  slice.hpp  string.hpp  traits.hpp  tuple.hpp  typeops.hpp  types.hpp  unique.hpp  util.hpp  vector.hpp
interface/public/vixen/allocator/: allocator.hpp  allocators.hpp  layout.hpp  pool_allocator.hpp  profile.hpp  stacktrace.hpp
interface/public/vixen/io/: file.hpp  file_stream.hpp
old/: iterator.hpp  stream.hpp
old/stream/: basic.inl
src/: allocator.cpp  arena_alloc.cpp  assert.cpp  legacy_adapter.cpp  page_alloc.cpp  profile.cpp  shared.inl  string.cpp  string.inl  typeops.inl
src/allocator/: allocator.inl
src/stacktrace/: platform.cpp
src/vixen/: allocator.cpp  assert.cpp  erased_storage.hpp  linear_alloc.cpp  log.cpp  page_alloc.cpp  shared.inl  string.inl  system_alloc.cpp  vector.inl
src/vixen/allocator/: allocator.inl
src/vixen/bits/hash/: hasher.inl  map.inl  table.inl
src/vixen/io/: file.inl
src/vixen/stacktrace/: platform.cpp  stacktrace.cpp
src/vixen/vixen/bits/hash/: hasher.inl  map.inl
vixen/: CMakeLists.txt
vixen/docs/: Doxyfile.in  doxygen-awesome.css
vixen/impl/inl/: erased_storage.hpp  hashmap.inl  iterator.inl  option-storage.inl  option.inl  shared.inl  slice.inl  string.inl  typeops.inl  unique.inl  vec.inl
vixen/impl/inl/allocator/: allocator.inl
vixen/impl/inl/io/: file.inl
vixen/impl/inl/vixen/bits/hash/: hasher.inl  map.inl  table.inl
vixen/impl/inl/vixen/bits/stream/: basic.inl
vixen/interface/internal/vixen/hash/: hasher.hpp  map.hpp  table.hpp
vixen/interface/public/vixen/: any.hpp  assert.hpp  common.hpp  defer.hpp  defines.hpp  function.hpp  hashmap.hpp  iterator.hpp  log.hpp  option.hpp  prof.hpp  result.hpp  shared.hpp  slice.hpp  stream.hpp  string.hpp  traits.hpp  tuple.hpp  typeops.hpp  types.hpp  unique.hpp  util.hpp  vec.hpp
vixen/interface/public/vixen/allocator/: allocator.hpp  allocators.hpp  layout.hpp  pool_allocator.hpp  profile.hpp  stacktrace.hpp
vixen/interface/public/vixen/io/: file.hpp  file_stream.hpp
vixen/interface/vixen/: assert.hpp  color.hpp  defines.hpp  hashmap.hpp  iterator.hpp  log.hpp  option.hpp  result.hpp  shared.hpp  slice.hpp  stream.hpp  string.hpp  traits.hpp  tuple.hpp  typeops.hpp  types.hpp  unique.hpp  util.hpp  vec.hpp
vixen/interface/vixen/allocator/: allocator.hpp  allocators.hpp  layout.hpp  profile.hpp  stacktrace.hpp
vixen/interface/vixen/io/: file.hpp  file_stream.hpp
xen_core/: CMakeLists.txt
xen_core/include/xen/: assert.hpp  defer.hpp  log.hpp  traits.hpp  types.hpp  util.hpp
xen_core/src/: assert.cpp  log.cpp
xen_data/: CMakeLists.txt
xen_data/include/inl/: hashmap.inl  iterator.inl  option-storage.inl  option.inl  slice.inl  string.inl  typeops.inl  unique.inl  vec.inl
xen_data/include/inl/allocator/: allocator.inl
xen_data/include/inl/io/: file.inl
xen_data/include/xen/: color.hpp  hashmap.hpp  iterator.hpp  option.hpp  slice.hpp  stream.hpp  string.hpp  tuple.hpp  typeops.hpp  unique.hpp  vec.hpp
xen_data/include/xen/allocator/: allocator.hpp  allocators.hpp  layout.hpp  profile.hpp  stacktrace.hpp
xen_data/include/xen/io/: file.hpp  file_stream.hpp
xen_data/src/: allocator.cpp  arena_alloc.cpp  legacy_adapter.cpp  linear_alloc.cpp  page_alloc.cpp  profile.cpp  stacktrace.cpp  string.cpp  system_alloc.cpp
